Added header component

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <title>Social Network</title>
+    <script src="https://kit.fontawesome.com/50ff04d4cf.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
